+link to github

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script src="http://raw.github.com/rapportive-oss/jquery-touchslider/master/jquery.touchslider.js"></script>
 
+<a href="https://github.com/rapportive-oss/jquery-touchslider"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
+
 <div class="slider" style="width: 800px; font-size: 0">
     <div class="slides">
         <div style="margin-left: -560px; height: 600px; vertical-align: top;
